# Jarvis

./: .gitignore  BOOTSTRAP_BENCHMARKS.md  BOOTSTRAP_DOCS_STATE_CONFIG.md  BOOTSTRAP_DOCS_STATE_CONTEXTUAL_NVIM.md  BOOTSTRAP_DOCS_STATE_MCP.md  BOOTSTRAP_DOCS_STATE_MCP_HUB.md  BOOTSTRAP_DOCS_STATE_NEOVIM.md  BOOTSTRAP_DOCS_STATE_PRIVACY_PERF.md  BOOTSTRAP_DOCS_STATE_SPECULATIVE.md  BOOTSTRAP_ERS.md  BOOTSTRAP_INDEXING.md  BOOTSTRAP_ROUTER.md  BOOTSTRAP_STATE_CLI.md  BOOTSTRAP_STATE_CONFIG.md  BOOTSTRAP_STATE_CONTEXTUAL_NVIM.md  BOOTSTRAP_STATE_DOCS_ASSETS.md  BOOTSTRAP_STATE_DOCS_EDITOR.md  BOOTSTRAP_STATE_DOCS_KB.md  BOOTSTRAP_STATE_DOCS_LEAD.md  BOOTSTRAP_STATE_DOCS_SECURITY.md  BOOTSTRAP_STATE_DOCS_SYSTEMS.md  BOOTSTRAP_STATE_MCP.md  BOOTSTRAP_STATE_MCP_HUB.md  BOOTSTRAP_STATE_MERGE_V2.md  BOOTSTRAP_STATE_NEOVIM.md  BOOTSTRAP_STATE_PRIVACY_PERF.md  BOOTSTRAP_STATE_SPECULATIVE.md  Benchmarks And Accuracy Report  CHANGELOG_V2.md  DEPRECATED.md  INSTALL.md  Makefile  README.md  jarvis.py  requirements-v2.txt  test_ollama.py  whisper-cpp-out
benchmarks/: integration_connectivity.sh
chains/: debug_error.yaml  git_summarize.yaml  nixos_verify.yaml  research_and_summarize.yaml  research_deep.yaml  security_audit.yaml
completions/: _jarvis  jarvis-completions.plugin.zsh
config/: budget.toml  codebases.toml  mcp_servers.toml  models.toml  preferences.toml
docs/: ADVANCED_NEOVIM.md  ADVANCED_USAGE.md  AI_TERMINOLOGY.md  ANTHROPIC_BENCHMARK_ANALYSIS.md  ANTIGRAVITY_IDE.md  API_KEYS.md  (+48 more)
jarvis-monitor/: Cargo.toml
jarvis-monitor/src/: app.rs  data.rs  main.rs  ui.rs
(+209 files in other folders)
