[package]
name = "jarvis-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jarvis-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
anyhow = "1.0.102"
